# MongoDB_Network_Security

./: .gitignore  README.md  app.py  main.py  push_data.py  pyproject.toml  requirements.txt  test_mongodb.py
network_security/src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
network_security/src/constatnts/training_pipeline/: __init__.py
network_security/src/entities/: artifact_entity.py  config_entity.py
network_security/src/exception/: exception.py
network_security/src/pipelines/: training_pipeline.py
network_security/src/utils/main_utils/: utils.py
network_security/src/utils/ml_utils/metric/: classification_metric.py
network_security/src/utils/ml_utils/model/: estimator.py
